2009-12-23  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* test/xmltest/modifyInstance_ServerProv.*, enumerateInstance_CIM_IndicationService.lines
	[ 2919072 ] IndicationProfile: CIM_IndicationService ModifyInstance [ Test case failures updated ]

2009-12-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 2919753 ] Some IndicationSubscriptions cannot be deleted

2009-12-21  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* interopServerProvider.c, cmpidt.h
	[ 2919072 ] IndicationProfile: CIM_IndicationService ModifyInstance

2009-12-18  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, objectImpl.h, sfcbdump.c, sfcbrepos.sh.in, 
	  support.c, mofc/backend_sfcb.c, mofc/mofparse.c,
	  mofc/symtab.c, classProviderSf.c:
	[ 1664637 ] Reduced size class repository / classProviderSf

2009-12-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2908423 ] Honor DeliveryRetry* props of CIM_IndicationService

2009-12-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c:
	[ 2818014 ] EnumerateClasses segfault w/DeepInheritance prop setting
	(refix)

	* classProvider.c, classProviderMem.c:
	[ 2915957 ] Port 2192023 fix to classProvider and classProviderMem

2009-12-15  Surendra Kodali  

        * ABTScript
        [ 2893373 ] Test reports need to include xml results files

2009-12-15  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* interopServerProvider.c
	[ 2915198 ] Interop Server Provider returns incorrect object

2009-12-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, providerMgr.h:
	[ 2914435 ] providers should receive param info from providerRegister

	* classProviderGz.c, default.reg.in:
	[ 2914484 ] classProviderGz's cacheLimit should be tunable at runtime

2009-12-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2910372 ] Provider user and params strdup'd but never free'd

	* support.c, sfcBroker.c, providerRegister.h, providerRegister.c: