@@ -43,6 +43,7 @@ Bugs fixed:
 - 2818014 EnumerateClasses segfault w/DeepInheritance prop setting
 - 2915957 Port 2192023 fix to classProvider and classProviderMem
 - 2919753 Some IndicationSubscriptions cannot be deleted
+- 2920387 IndicationProfile: CIM_IndicationService doesn't persist
 
 Changes in 1.3.5
 ================
