@@ -1,3 +1,8 @@
+2009-12-23  Sean Swehla  <smswehla@linux.vnet.ibm.com>
+
+	* interopServerProvider.c
+	[ 2920387 ] IndicationProfile: CIM_IndicationService doesn't persist
+
 2009-12-23  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
 	* test/xmltest/modifyInstance_ServerProv.*, enumerateInstance_CIM_IndicationService.lines
 	[ 2919072 ] IndicationProfile: CIM_IndicationService ModifyInstance [ Test case failures updated ]
